# MD_OTP

./: CMakeLists.txt  README.md  settings.cmake
3th/krad/: Makefile  attr.c  attrset.c  code.c  internal.h  k5-queue.h  remote.c
3th/krb/include/: k5-json.h  k5-queue.h  otp_state.h
3th/krb/source/: main.c  otp_state.c
include/: internal.h  k5-platform.h  md_attrset.h  md_kdcpreauth_plugin.h  md_otp.h
source/: attrset.c  code.c  main.c  md_main.c  md_main_vt.c  md_otp.c  md_otp_fun.c  md_utis.c  otp_fun.c  otp_state.c
test/: attrset.c  k5-int-pkinit.h  k5-int.h  md_k5-int.h
test_plugin/: CMakeLists.txt  md_otp.c
test_plugin/include/: md_kdcpreauth_plugin.h  md_otp.h
test_plugin/source/: md_otp.c
